@@ -6,3 +6,4 @@ Imager.c
 pm_to_blib
 Imager.bs
 t1lib.log
+imconfig.h
